# discord-llm-scraper

./: .gitignore  README.md  main.py  pyproject.toml
src/: discord.py  embed.py  embedding.py  main.py  query.py  search.py  summarise.py  summary.py  util.py
